--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilo/media-query.css">
 </head>
+<body>
     <main>
         <section id="login">
             <!--imagem no css-->
@@ -22,7 +24,5 @@
 
     </main>
 
-<body>
-    
 </body>
 </html>
