--- a/index.html
+++ b/index.html
@@ -10,19 +10,24 @@
 <body>
     <main>
         <section id="login">
-            <!--imagem no css-->
             <div id="imagem">
-
+                foto
             </div>
             <div id="formulario">
-                <h1>Login</h1>
-                <p>Seja Bem Vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configuraçoes no seu ambiente. </p>
+                <h1>
+                    login
+                </h1>
+                <p>Seja bem-vindo novamente. Faça login para acessar sua conta.</p>
+                <form action="login.php" method="post">
 
-                <form action="login.php" method="post"></form>
             </div>
+
+
+
+
         </section>
 
-    </main>
 
+    </main>
 </body>
 </html>
