--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Login</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilo/media-query.css">
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 </head>
 <body>
     <main>
@@ -15,11 +18,22 @@
             </div>
             <div id="formulario">
                 <h1>
-                    login
+                    Login
                 </h1>
                 <p>Seja bem-vindo novamente. Faça login para acessar sua conta.</p>
                 <form action="login.php" method="post">
-
+                    <div class="campo">
+                        <i class="material-icons">person</i>
+                        <input type="email" name="Login" id="ilogin" placeholder="Seu Email" required maxlength="30"> 
+                        <label for="ilogin">Login</label>
+                    </div>
+                    <div class="campo">
+                        <i class="material-icons">passkey</i>
+                        <input type="password" name="Senha" id="isenha" placeholder="Sua senha" required maxlength="16" minlength="8">
+                        <label for="isenha">Senha</label>
+                    </div>
+                    <input type="submit" value="Entrar">
+                    <a href="esqueci a senha">esqueci a senha <i class="material-icons">mail</i></a>
             </div>
 
 
