--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <label for="ilogin">Login</label>
                     </div>
                     <div class="campo">
-                        <i class="material-icons">passkey</i>
+                        <i class="material-icons">key</i>
                         <input type="password" name="Senha" id="isenha" placeholder="Sua senha" required maxlength="16" minlength="8">
                         <label for="isenha">Senha</label>
                     </div>
